<resources>
    <string name="about_us_tel">4009911005</string>
    <string name="about_us">关于优工连</string>
    <string name="app_name">优工连</string>
    <string name="homepage_name">优工连</string>
    <string name="str_fragment_home_text">首页</string>
    <string name="str_fragment_hunter_text">猎头</string>
    <string name="str_fragment_publish_text">发布</string>
    <string name="str_fragment_classify_text">分类</string>
    <string name="str_fragment_mine_text">我的</string>
    <string name="home_search">请输入搜索内容</string>
    <string name="tv_search">搜索</string>
    <string name="product">商品</string>
    <string name="phone">手机号</string>
    <string name="phone_colon">手机号:</string>
    <string name="safe_bind_wechat">微信</string>
    <string name="safe_bind_qq">QQ</string>
    <string name="update_login_password">修改登录密码</string>
    <string name="update_trade_password">修改交易密码</string>
    <string name="safe_identity_authentication">实名认证</string>
    <string name="home_report">举报</string>
    <string name="home_collect">收藏</string>
    <string name="account_safe_str">账号安全</string>
    <string name="bind_phone_num_str">绑定手机号</string>
    <string name="please_input_phone_num">请输入您的手机号</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="please_input_update_phone_str">请输入您要修改的手机号</string>
    <string name="country_district">国家和地区</string>
    <string name="next_step">下一步</string>
    <string name="update_phone_num_title">修改手机号</string>
    <string name="my_acount_real_name">真实姓名</string>
    <string name="acount_input_real_name">请填写真实姓名</string>
    <string name="str_real_name">真实姓名</string>
    <string name="str_identity_card">身份证</string>
    <string name="acount_input_identity_card">请填写身份证号码</string>
    <string name="str_verification_code">验证码</string>
    <string name="real_name_authentication_tips">提示：请认真填写身份信息，该信息将作为您提现的重要认证</string>
    <string name="commit">提交信息</string>
    <string name="verification_send_success">我们已经发送了验证码到您的手机</string>
    <string name="finish">完成</string>
    <string name="str_set_pwd_tips">密码由6-20位英文字母、数字组成</string>
    <string name="set_pwd">设置密码</string>
    <string name="sure_pwd">确认密码</string>
    <string name="set_login_pwd">设置登录密码</string>
    <string name="old_pwd">原密码</string>
    <string name="old_pwd_str">请输入原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="new_pwd_str">请输入新密码</string>
    <string name="trade_pwd_str">交易密码</string>
    <string name="input_trade_pwd">输入交易密码</string>
    <string name="please_input_trade_pwd_again">再次输入交易密码</string>
    <string name="set_trade_pwd">设置交易密码</string>
    <string name="real_name_authentication">实名认证</string>
    <string name="forget_trade_password">忘记交易密码</string>
    <string name="pwd_set">密码设置</string>
    <string name="input_trade_pwd_sign">输入交易密码，完成身份验证</string>
    <string name="trade_pwd_tips">密码不能为连续重复的数字</string>
    <string name="trade_pwd_not_match_condition">交易密码不能为6个连续或重复的数字</string>
    <string name="verify_pwd_is_same">两次输入的密码不一致,请重新输入</string>
    <string name="set_person_info">个人信息</string>
    <string name="set_feed_back">意见反馈</string>
    <string name="set_clear_catch">清除缓存</string>
    <string name="set_version_update">版本更新</string>
    <string name="set_logout">退出登录</string>
    <string name="set_address">收货地址</string>
    <string name="add_goods">添加新商品</string>
    <string name="more_manage">批量管理</string>
    <string name="on_sale">(上架)</string>
    <string name="off_shelf">(下架)</string>
    <string name="delete">(删除)</string>
    <string name="certificate_type">证件类型</string>
    <string name="ic_card">身份证</string>
    <string name="certificate_num">证件号</string>
    <string name="please_input_right_identity_card">请输入正确的身份证号码</string>
    <string name="my_huntting_beans">我的优币</string>
    <string name="huntting_bean_detail">兑换明细</string>
    <string name="ok">确定</string>
    <string name="sure">确定要退出当前账号吗?</string>
    <string name="takephotp">拍照</string>
    <string name="takepicter">从手机相册中选择</string>
    <string name="cancle">取消</string>
    <string name="attentioned">已关注</string>
    <string name="both_attention">互相关注</string>
    <string name="add_attention">+关注</string>
    <string name="check_new_verison">检查新版本</string>
    <string name="set_head">点击修改头像</string>
    <string name="set_name">昵称 : </string>
    <string name="set_infro">简介 : </string>
    <string name="set_serve">服务区域 : </string>
    <string name="hint_company">我是</string>
    <string name="set_phonetext">手机/QQ/邮箱（选填）</string>
    <string name="set_comment">提交</string>
    <string name="my">联系我们</string>
    <string name="telephone">010-80834355</string>
    <string name="bank_type">请选择银行卡类型</string>
    <string name="bank_person">持卡人</string>
    <string name="bank_num">卡号</string>
    <string name="bank_typenum">卡类型</string>
    <string name="bunter_out">我卖出的</string>
    <string name="bunter_more">查看更多</string>
    <string name="bank_banknum">请输入银行卡号</string>
    <string name="bank_textview">请绑定持卡人本人的银行卡</string>
    <string name="nobank_textview">您还没有绑定银行卡</string>
    <string name="bank_textvie_card">绑定银行卡</string>
    <string name="bank_verfiy_card">绑定银行卡需要短信确认，验证码已发送至手机：</string>
    <string name="bank_message">输入短信验证码</string>
    <string name="bank_messagecode">验证码</string>
    <string name="bank_verfiy_cardnum"> 18666665820</string>
    <string name="bank_verfiy_cardnumtext">，请按提示操作</string>
    <string name="bank_auto">自动获取</string>
    <string name="bank_relieve">解除绑定</string>
    <string name="project_title">标题 请输入课题标题 如：土特产</string>
    <string name="project_content">正文 描述一下此课题的想法以及个人自身的优势</string>
    <string name="project_position">你在哪里?</string>
    <string name="project_addcover">添加封面</string>
    <string name="project_sure">确认申请</string>
    <string name="add_a_cover">添加封面图(1-3张) /封面视频</string>
    <string name="ps_title">例: 西服套装男士三件套四季</string>
    <string name="ps_describe">例: 拥有多年私人订制经验</string>
    <string name="publish_main_body_edit">例: 西服套装男士三件套四季</string>
    <string name="enter_title">请输入标题</string>
    <string name="add_title_img">添加标题图片(1-3张)</string>
    <string name="enter_text">请输入正文...</string>
    <string name="plan_describe">服务描述</string>
    <string name="plan_title">服务标题</string>
    <string name="plan_number">计划编号</string>
    <string name="plus_sign">+</string>
    <string name="is_add_product_plan">是否添加服务项目，添加请点击</string>
    <string name="more_chance_text">为生活添加更多的机会</string>
    <string name="choose_classify">选择发布分类</string>
    <string name="support_multi_choice">（支持多选）</string>
    <string name="product_plan">服务项目</string>
    <string name="project_plan">课题</string>
    <string name="video">视频</string>
    <string name="input_video_title">请输入视频标题...</string>
    <string name="issue_services_available">发布服务项目</string>
    <string name="login_exempt">免密码登录>></string>
    <string name="login_number_login">账号密码登录>></string>
    <string name="login_forget_psw">忘记密码?</string>
    <string name="login_join">立即登入</string>
    <string name="login_message">还没有账户，现在去</string>
    <string name="login_message1">已有账户，直接</string>
    <string name="login_register">注册</string>
    <string name="register_login">登录</string>
    <string name="agree_us">已同意并阅读</string>
    <string name="xieyi">《用户服务协议》</string>
    <string name="please_input_new_pwd_str">请输入您的新密码</string>
    <string name="more">更多</string>
    <string name="hunter_name">昵称</string>
    <string name="my_order_use">待使用</string>
    <string name="my_order_exchange">退款/售后</string>
    <string name="pending_refund_after">申请/退款</string>
    <string name="hunter_pay">待付款</string>
    <string name="hunter_drliver">待发货</string>
    <string name="hunter_take">待收货</string>
    <string name="my_order_delivered">已发货</string>
    <string name="hunter_appraise">待评价</string>
    <string name="hunter_after">退换售后</string>
    <string name="hunter_shopping">商品管理</string>
    <string name="refund_service">退款服务</string>
    <string name="service_number">服务数量</string>
    <string name="refuse_reason">拒绝理由：</string>
    <string name="refund_explain">退款说明：</string>
    <string name="refund_explain2">退款说明</string>
    <string name="application_for_refund">申请退款</string>
    <string name="please_choose">请选择</string>
    <string name="select_product">选择商品</string>
    <string name="money_string">¥%1$s</string>
    <string name="freight_hint">运费方式: 除指定地区外,其余地区的运费采用"默认运费"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fetch_money">提现金额</string>
    <string name="service_charge">手续费</string>
    <string name="into_card">到账银行卡</string>
    <string name="sure_login">确认登录</string>
    <string name="fans">这里会展示你的粉丝</string>
    <string name="attention">这里会展示你关注的人</string>
    <string name="no_hunt_beans">您还没有优币明细</string>
    <string name="input_phone_num_11">请输入11位手机号</string>
    <string name="register_message_code">短信验证码</string>
    <string name="register_input_psw">请输入密码</string>
    <string name="request_network_fail">请求网络失败</string>
    <string name="set_login_password">设置登录密码</string>
    <string name="issue_commodity_name">商品名称</string>
    <string name="issue_commodity_particulars">商品详情</string>
    <string name="issue_commodity_hint">例: 蒲瑞生西服套装(必填)</string>
    <string name="issue_add_commodity_hint">（添加商品图片1~6张）</string>
    <string name="issue_diary_hint">例：今天为一对新人定制了西装、婚纱 （选填 详细的历程更受关注哦）</string>
    <string name="error_hint">服务器异常,请稍后重试</string>
    <string name="issue_commodity_classify_hint">例：服装>内衣</string>
    <string name="add_server_project">添加服务项目</string>
    <string name="cancle_collect">取消收藏</string>
    <string name="delete_btn">删除</string>
    <string name="compile">编辑</string>
    <string name="fail_cause">失败原因：</string>
    <string name="zxing">扫一扫上面二维图案，加我好友</string>
    <string name="share_zxing">分享我的二维码</string>
    <string name="how_service_team">你还不是经纪人哦！</string>
    <string name="how_service_team_text">如何成为经纪人？</string>
    <string name="earnings_service_team">邀请一名未在平台上注册的新用户即可成为经纪人。</string>
    <string name="earnings_service_team_text">成为服务团队即可获得平台现金奖励。每售出一件产品即可获得现金分润奖励。</string>
    <string name="already_service_team">您已成为服务团队！</string>
    <string name="now_service_team">立即邀请好友</string>
    <string name="now_apprentice">立即收徒</string>
    <string name="in_task">进入课题专员中心</string>
    <string name="how_task">如何成为课题专员？</string>
    <string name="how_task_text">邀请好友成为你的徒弟即可申请成为课题专员，点击立刻收徒，快来成为课题专员吧！</string>
    <string name="earnings_task">课题专员的收益有哪些？</string>
    <string name="earnings_task_text">成为课题专员即可收益你的会员所购入的每件商品提成，你的群聊中所有会员购买商品你都可以得到提成分润。</string>
    <string name="already_task">您已成为课题专员！</string>
    <string name="you_apprentice">你的徒弟</string>
    <string name="myissue">我的发布</string>
    <string name="mycollect">我的收藏</string>
    <string name="myzxing">我的二维码</string>
    <string name="apply_task">申请成为课题专员</string>
    <string name="apply_service_team">申请成为经纪人</string>
    <string name="my_order">我的订单</string>
    <string name="service_order">服务订单</string>
    <string name="goods_order">商品订单</string>
    <string name="card">卡联盟</string>
    <string name="look_all_order">查看全部订单</string>
    <string name="my_service_order">我的服务订单</string>
    <string name="all_order">全部订单</string>
    <string name="choose_sale_state">选择营业状态</string>
    <string name="onsale">营业中</string>
    <string name="pause_sale">暂停营业</string>
    <string name="close_door">已关门</string>
    <string name="sale_state">营业状态</string>
    <string name="base_info">基本信息</string>
    <string name="team_address">团队地址</string>
    <string name="server_range">服务范围</string>
    <string name="sale_class">经营品类</string>
    <string name="input_team_address">请输入团队地址</string>
    <string name="team_name">团队名称</string>
    <string name="input_phone">请输入首选电话，非必填</string>
    <string name="tv_phone">电\t\t话</string>
    <string name="team_intro">团队简介</string>
    <string name="hint_intro">请介绍一下团队信息</string>
</resources>