<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/include"
        layout="@layout/main_title"></include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_EEEEEE"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/choose_sale_state"
        android:textSize="15sp" />

    <RadioGroup
        android:layout_marginLeft="10dp"
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbtn_sale"
            style="@style/server_state"
            android:text="@string/onsale" />

        <View style="@style/view_style"></View>

        <RadioButton
            android:id="@+id/rbtn_pause_sale"
            style="@style/server_state"
            android:text="@string/pause_sale" />

        <View style="@style/view_style"></View>

        <RadioButton
            android:id="@+id/rbtn_close_door"
            style="@style/server_state"
            android:text="@string/close_door" />

        <View style="@style/view_style"></View>

    </RadioGroup>

</LinearLayout>