<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/include"
            layout="@layout/main_title"/>


        <RelativeLayout style="@style/info_style">

            <TextView
                android:id="@+id/tv_name"
                style="@style/info_tv_style"
                android:text="@string/team_name" />

            <EditText
                android:id="@+id/et_tean_name"
                style="@style/info_et_style"
                android:layout_toRightOf="@id/tv_name"
                android:hint="@string/team_name" />
        </RelativeLayout>

        <include layout="@layout/line"/>

        <RelativeLayout style="@style/info_style">

            <TextView
                android:id="@+id/tv_address"
                style="@style/info_tv_style"
                android:text="@string/team_address" />

            <TextView
                android:id="@+id/et_team_address"
                style="@style/info_et_style"
                android:gravity="center_vertical"
                android:layout_toRightOf="@id/tv_address"
                android:hint="@string/input_team_address" />
        </RelativeLayout>

        <include layout="@layout/line"/>

        <RelativeLayout style="@style/info_style">

            <TextView
                android:id="@+id/tv_phone"
                style="@style/info_tv_style"
                android:text="@string/tv_phone" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/info_et_style"
                android:layout_toRightOf="@id/tv_phone"
                android:hint="@string/input_phone" />
        </RelativeLayout>

        <include layout="@layout/line"/>


        <TextView
            style="@style/info_tv_style"
            android:text="@string/team_intro" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginBottom="@dimen/x15"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x15"
            android:background="@drawable/shape_et_teaminfo">

            <EditText
                android:id="@+id/et_team_intro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="clip_vertical"
                android:hint="@string/hint_intro"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:textColorHint="@color/color_999999"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_et_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/color_999999" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/100字"
                    android:id="@+id/tv_et_end"
                    android:textColor="@color/color_999999" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_commit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/x15"
        android:layout_marginRight="@dimen/x15"
        android:background="@drawable/shape_project_sure"
        android:gravity="center"
        android:text="@string/set_comment"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>