<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ECECEC"
    android:orientation="vertical"
    tools:context="com.yst.onecity.activity.ApplyServeCommissionerActivity">

    <include layout="@layout/main_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/activity_line_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/x10"
        android:paddingLeft="@dimen/x20"
        android:paddingRight="@dimen/x20"
        android:paddingTop="@dimen/x10"
        android:text="@string/how_task"
        android:textColor="@color/color_333333"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/x10"
        android:paddingLeft="@dimen/x20"
        android:paddingRight="@dimen/x20"
        android:text="@string/how_task_text"
        android:textColor="@color/color_333333"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_ECECEC" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/x10"
        android:paddingLeft="@dimen/x20"
        android:paddingRight="@dimen/x20"
        android:paddingTop="@dimen/x10"
        android:text="@string/earnings_task"
        android:textColor="@color/color_333333"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/x10"
        android:paddingLeft="@dimen/x20"
        android:paddingRight="@dimen/x20"
        android:text="@string/earnings_task_text"
        android:textColor="@color/color_333333"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_ECECEC" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingBottom="@dimen/x10"
            android:paddingLeft="@dimen/x20"
            android:paddingRight="@dimen/x20"
            android:paddingTop="@dimen/x10"
            android:text="@string/you_apprentice"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_serve_num"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/white"
            android:padding="@dimen/x10"
            android:text="0/2"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_serve_already"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x90"
        android:gravity="center"
        android:text="@string/already_task"
        android:textColor="@color/color_AAAAAA"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_apprentice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginTop="@dimen/x15"
        android:background="@drawable/shape_btn_pink_red_bg"
        android:text="@string/now_apprentice"
        android:textColor="@color/white" />
</LinearLayout>
