<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ECECEC"
    android:orientation="vertical"
    tools:context="com.yst.onecity.activity.ApplyHunterActivity">

    <include layout="@layout/main_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_ECECEC" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/x12"
        android:paddingLeft="@dimen/x20"
        android:paddingRight="@dimen/x20"
        android:paddingTop="@dimen/x10"
        android:text="@string/how_service_team"
        android:textColor="@color/color_92969C"
        android:textSize="@dimen/textsize_13" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/x12"
        android:paddingLeft="@dimen/x20"
        android:paddingRight="@dimen/x20"
        android:text="@string/how_service_team_text"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/text_size_15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/x12"
        android:paddingLeft="@dimen/x20"
        android:paddingRight="@dimen/x20"
        android:text="@string/earnings_service_team"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/textsize_13" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_ECECEC" />


    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginTop="@dimen/x200"
        android:background="@drawable/shape_btn_bg"
        android:text="@string/now_service_team"
        android:textColor="@color/white" />
</LinearLayout>
